fix: preserve transcription white spaces in editor

--- a/module-gui/src/main/webapp/resources/uii/plugins/step/intranda_step_transcription/css/style.css
+++ b/module-gui/src/main/webapp/resources/uii/plugins/step/intranda_step_transcription/css/style.css
@@ -53,3 +53,8 @@
 	flex-grow: 1;
 	margin-right: 10px;
 }
+
+.ql-clipboard,
+.ql-editor {
+    white-space: pre-wrap;
+}
